[package]
name = "yancy"
version = "0.1.4"
edition = "2024"
authors = ["alostsock <hi@alostsock.dev>"]
description = "Converts film negatives to positive images"
readme = "readme.md"
repository = "https://github.com/alostsock/yancy"
license-file = "LICENSE"
include = ["src/"]
exclude = ["external/", "examples/", "test"]

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
cxx = "1.0"
image = "0.25.8"
imageproc = "0.25.0"
openmp-sys = "1.3.0"
rayon = "1.11.0"

[build-dependencies]
cxx-build = "1.0"
